<resources>
    <string name="app_name">Las Vegas Views</string>
    <string name="worth">Worth</string>
    <string name="view">View</string>
    <string name="one">One</string>
    <string name="thousand_words">Thousand Words</string>
    <string name="a">a</string>
    <string name="the_start_hotel_casino_amp_skypod">The Start Hotel, Casino &amp; SkyPod</string>
    <string name="sky_bar_at_waldorf_astoria">Sky Bar at Waldorf Astoria</string>
    <string name="_274">(274)</string>
    <string name="_3_70">3.70</string>
    <string name="_478">(478)</string>
    <string name="_4_0">4.0</string>
    <string name="_510">(510)</string>
    <string name="_4_91">4.91</string>
    <string name="boulevard_pool_at_the_cosmopolitan">Boulevard Pool at The Cosmopolitan</string>
    <string name="top_of_the_world_is_known_as_one_of_the_most_romantic_restaurants_in_the_city_it_offers_an_intimate_dining_setting_paired_with_an_extravagant_view_of_the_entire_city_all_encompassed_in_360_degree">Top of the World is known as one of the most romantic restaurants in the city. it offers an intimate dining setting paired with an extravagant view of the entire city, all encompassed in 360-degree…</string>
    <string name="more_details">More Details</string>
    <string name="about">About</string>
    <string name="about2">Top of the World is known as one of the most romantic restaurants in the city. it offers an intimate dining setting paired with an extravagant view of the entire city, all encompassed in 360-degree revolving frame.Yes, that\'s right, this restaurant allows diners the opportunity to see Las Vegas in its entirety if they\'re able to stay for at least 80 minutes. the time needed for one full rotation</string>
    <string name="venue_type">Venue Type</string>
    <string name="restaurant">Restaurant</string>
    <string name="typeofview">it might surprise you, but this is the only revolving restaurant in Las Vegas, Located 844 feet in the ait you\'re bound to get a great view of the city with its massive floor-to-ceiling Windows.</string>
    <string name="type_of_view">Type of View</string>
    <string name="c_h_e_c_k_r_o_a_d_m_a_p"></string>
</resources>
